Change delete animation: prevent overflow issues

--- a/index.css
+++ b/index.css
@@ -548,7 +548,7 @@
 			position: absolute;
 			top: 0;
 			right: 0;
-			transform: translateY(-90%) translateX(20px);
+			transform: translateY(-90%) translateX(18px);
 			opacity: 1;
 			transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55),
 				opacity 0.6s ease;
